# InboxAgent

./: README.md  graph.py  pyproject.toml  state.py  test_worflow.py  todo.txt
agents/: classifier.py  executor.py  llm.py  planner.py  priority.py
api/: main.py  routes.py  runner.py  schemas.py
audit/: audit_log.db
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  main.jsx
frontend/src/components/: EmailCard.jsx
frontend/src/pages/: ResultView.jsx  RunForm.jsx  StatusView.jsx
memory/: long_term_memory.db  nodes.py
tools/: credential.py
