[project]
name = "inbox-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "google-api-python-client>=2.198.0",
    "google-auth>=2.56.2",
    "google-auth-oauthlib>=1.4.0",
    "langchain>=1.3.14",
    "langchain-core>=1.5.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.9",
    "uvicorn>=0.51.0",
]
